fix navbar overflow on mobile

--- a/style.css
+++ b/style.css
@@ -61,8 +61,11 @@ hr {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     background-color: var(--grey);
-    height: 6vh;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    /* max-height: 10vh; */
 }
 
 .button-item {
